tests/NormalTests/paczka1/small_fuzzy/10511787.err
Error in line 5: 14Zc4hBM A521 80,1
Error in line 8: 14Zc4hBM S95 49,3
Error in line 14: S95 S95 24,09
